added new photos and pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/layout.css">
+	<link href='https://fonts.googleapis.com/css?family=Bitter:400,400italic' rel='stylesheet' type='text/css'>
 
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>a
@@ -234,7 +235,7 @@
 			
 			<div class="portfolio paint" data-cat="paint">
 				<div class="portfolio-wrapper">			
-					<img src="img/portfolios/paint/6.jpg" alt="" />
+					<a href="steph.html"><img src="img/portfolios/paint/6.jpg"/></a>
 					<div class="label">
 						<div class="label-text">
 							<a class="text-title">Portrait</a>
