--- a/steph.html
+++ b/steph.html
@@ -79,7 +79,7 @@
 
 
 	<div class="container2">
-		<img src="img/portfolios/paintFull/stephDetail.jpg" align="middle" />
+		<img src="img/portfolios/paintFull/stephDetail.jpg" align="middle" width="100%" height="100%" />
 	</div>
 
 
