new pages / woman, monster, zombie

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 			
 			<div class="portfolio paint" data-cat="paint">
 				<div class="portfolio-wrapper">			
-					<img src="img/portfolios/paint/4.jpg" alt="" />
+					<a href="kmonster.html"><img src="img/portfolios/paint/4.jpg"/></a>
 					<div class="label">
 						<div class="label-text">
 							<a class="text-title">Concept Design</a>
@@ -222,7 +222,7 @@
 			
 			<div class="portfolio paint" data-cat="paint">
 				<div class="portfolio-wrapper">			
-					<img src="img/portfolios/paint/2.jpg" alt="" />
+					<a href="bluewoman.html"<img src="img/portfolios/paint/2.jpg" alt="" /></a>
 					<div class="label">
 						<div class="label-text">
 							<a class="text-title">Portrait</a>
@@ -303,7 +303,7 @@
 
 			<div class="portfolio paint" data-cat="paint">
 				<div class="portfolio-wrapper">			
-					<img src="img/portfolios/paint/7.jpg" alt="" />
+					<a href="zombie,html"><img src="img/portfolios/paint/7.jpg" alt="" /></a>
 					<div class="label">
 						<div class="label-text">
 							<a class="text-title">Concept Art</a>
