--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 			
 			<div class="portfolio paint" data-cat="paint">
 				<div class="portfolio-wrapper">			
-					<a href="bluewoman.html"<img src="img/portfolios/paint/2.jpg" alt="" /></a>
+					<a href="bluewoman.html"><img src="img/portfolios/paint/2.jpg" alt="" /></a>
 					<div class="label">
 						<div class="label-text">
 							<a class="text-title">Portrait</a>
