--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
 			<div class="portfolio paint" data-cat="paint">
 				<div class="portfolio-wrapper">			
-					<a href="zombie,html"><img src="img/portfolios/paint/7.jpg" alt="" /></a>
+					<a href="zombie.html"><img src="img/portfolios/paint/7.jpg" alt="" /></a>
 					<div class="label">
 						<div class="label-text">
 							<a class="text-title">Concept Art</a>
